Java 11 friendly memory settings for containers